# vd2db-example

./: README.md  pyproject.toml
DemoS_012_vd2db/AppData/: BrowseFormSettings.json  Cases.json  Groups.json  MasterFormFormSettings.json  ResultsFormSettings.json  Settings.json
DemoS_012_vd2db/Exported_files/: 092323_173440532.xlsx  092323_173736423.xlsx
DemoS_012_vd2db/SuppXLS/: Scen_DemProj_DTCAR.xlsx  Scen_Par-example.xlsx  Scen_Refinery.xlsx  Scen_UC_NUC_MaxCAP.xlsx  Scen_import_vd2db.xlsx
DemoS_012_vd2db/SuppXLS/ParScenFiles/: Scen_Par-example_0001.xlsx  Scen_Par-example_0002.xlsx  Scen_Par-example_0003.xlsx  Scen_Par-example_0004.xlsx
plot/: dict_vd2db.xlsx  graph_elec.ipynb  graph_elec.xlsx  test_database.db
vd2db/: console.py  vdfile.py
